# forest

./: .gitignore  Cargo.toml  README.md  package-lock.json
api/: Cargo.toml  README.md  build.rs
api/protos/: feature.proto  meta.proto  service.proto
api/src/: lib.rs  sniper.rs
core/: Cargo.toml
core/ps/: Cargo.toml
docs/: README.md  _sidebar.md  index.html
docs/framework/: README.md
docs/framework/ps/: README.md  hashmap.md  parameter_saving.md
docs/framework/topic/: README.md  auto_shard.md  concurrent_dispatch.md  grpc.md  multi_gpu.md  pipeline_parallel.md  training.md
docs/platform/: README.md  structure.md
docs/ps/: parameter_loading.md  parameter_type.md  parameter_updating.md  ps_and_hub.md  ps_and_trainer.md
docs/rust/: tonic.md
examples/: demo_train.py  dsp_ctr_lzs_nebula_appid_large_new_v1.txt  dsp_ctr_lzs_test_v5.json  start_hub.sh  start_ps.sh  start_trainer.sh  util.sh
grid-buffer/: Cargo.toml  README.md
grpc/: Cargo.toml  README.md  build.rs
grpc/proto/: BUILD.bazel  meta.proto  service.proto
grpc/protos/: feature.proto  meta.proto  service.proto
grpc/src/: grpc_client.rs  lib.rs  sniper.rs  tool.rs
grpc/trainer/core/proto/: BUILD.bazel  ad_gpu_ps.proto  meta.proto  service.proto  train_config.proto
hub/: Cargo.toml  README.md  build.rs
hub/api/protos/: feature.proto  meta.proto  service.proto
hub/src/: auto_shard_updater.rs  batch_assembler.rs  feed_sample.rs  hdfs_reader.rs  lib.rs  local_reader.rs  main.rs  pipeline.rs  request_handler.rs  sample.rs  start_sample.rs  task.rs  tool.rs  worker.rs
hub/tests/: tests.rs
ps/: Cargo.toml
ps/src/: arc_unsafe_slice.rs  arc_unsafe_vec.rs  dense.rs  embedding.rs  env.rs  lib.rs  main.rs  request_handler.rs  scheduler.rs  sign_converter.rs  tool.rs  variable_manager.rs
ps/src/checkpoint/: checkpoint_manager.rs  file_handler.rs  mod.rs  restore_task.rs  save_task.rs  tool.rs
ps/src/parameter/: mod.rs
scripts/: build_ps_hub.sh  install_cargo.sh  install_trainer.sh
trainer/: .bazelrc  BUILD.bazel  WORKSPACE  configure.sh  sniper.bzl  workspace.bzl
trainer-ops/: Cargo.toml  README.md
trainer/core/: proto
trainer/core/base/: BUILD.bazel  hash.h  semaphore.cc  semaphore.h  status.cc  threadpool.cc  threadpool.h  threadpool_test.cc  util.cc  util.h
trainer/core/operators/: BUILD.bazel
trainer/core/operators/kernels/: check_ckp_kernels.cc  count_feature_kernels.cc  create_dense_kernels.cc  create_embedding_table_kernels.cc  feed_queue.cc  feed_queue.h  freeze_kernels.cc  prefetch_dataset_kernels.cc  prefetch_kernels.cc  pull_variable_kernels.cc  push_grad_kernels.cc  push_variable_kernels.cc  restore_feature_count_kernels.cc  restore_kernels.cc  save_feature_count_kernels.cc  save_kernels.cc  start_sample_kernels.cc  train_config.cc  train_config.h
trainer/core/operators/ops/: freeze_ops.cc  pull_variable_ops.cc  push_grad_ops.cc  restore_ops.cc  save_feature_count_ops.cc  save_ops.cc  start_sample_ops.cc
trainer/core/rpc/: BUILD.bazel  request_handler.h  request_handler_impl.cc  request_handler_impl.h  rpc_client.cc  rpc_client.h  rpc_handler.h  rpc_server.cc  rpc_server.h  tensor_response.cc  tensor_response.h  tensor_response_test.cc
trainer/core/rpc/grpc/: BUILD.bazel  demo_client.cc  demo_server.cc  grpc_bytebuffer_stream.cc  grpc_bytebuffer_stream.h  grpc_client.cc  grpc_client.h  grpc_server.cc  grpc_server.h  grpc_service.h  grpc_tensor_coding.cc  grpc_tensor_coding.h  grpc_tensor_coding_test.cc
trainer/core/util/monitor/: BUILD.bazel  histogram.cc  histogram.h  run_status.cc  run_status.h  statistics.cc  statistics.h
trainer/core/util/placement/: BUILD.bazel  auto_shard.cc  auto_shard.h  feature_placement.cc  feature_placement.h
trainer/tools/codestyle/: pre-commit
trainer/trainer/: BUILD.bazel  demo_train.py  dsp_conv_sxb_nebula_appid_large_new.txt  dsp_ctr_lzs_test_v5.json  start.sh  trainer.bzl  workspace.bzl
trainer/trainer/core/: proto
trainer/trainer/core/base/: BUILD.bazel  config.h  semaphore.cc  semaphore.h  status.cc  status.h  threadpool.cc  threadpool.h  threadpool_test.cc  util.cc  util.h
trainer/trainer/core/operators/: BUILD.bazel
trainer/trainer/core/operators/kernels/: check_ckp_kernels.cc  count_feature_kernels.cc  create_dense_kernels.cc  create_embedding_table_kernels.cc  feed_queue.cc  feed_queue.h  freeze_kernels.cc  prefetch_dataset_kernels.cc  prefetch_kernels.cc  pull_variable_kernels.cc  push_grad_kernels.cc  push_variable_kernels.cc  restore_feature_count_kernels.cc  restore_kernels.cc  save_feature_count_kernels.cc  save_kernels.cc  start_sample_kernels.cc  train_config.cc  train_config.h
trainer/trainer/core/operators/ops/: check_ckp_ops.cc  count_feature_ops.cc  create_dense_ops.cc  create_embedding_table_ops.cc  prefetch_dataset_ops.cc  prefetch_ops.cc  push_variable_ops.cc  restore_feature_count_ops.cc  restore_ops.cc  save_ops.cc
trainer/trainer/core/rpc/: BUILD.bazel  request_handler.h  request_handler_impl.cc  request_handler_impl.h  rpc_client.cc  rpc_client.h  rpc_handler.h  rpc_server.cc  rpc_server.h  tensor_response.cc  tensor_response.h  tensor_response_test.cc
trainer/trainer/core/rpc/grpc/: BUILD.bazel  demo_client.cc  demo_server.cc  grpc_bytebuffer_stream.cc  grpc_bytebuffer_stream.h  grpc_client.cc  grpc_client.h  grpc_server.cc  grpc_server.h  grpc_service.h  grpc_tensor_coding.cc  grpc_tensor_coding.h  grpc_tensor_coding_test.cc
trainer/trainer/core/test/: run.sh  test.cc  test.h
trainer/trainer/core/util/monitor/: BUILD.bazel  histogram.cc  histogram.h  run_status.cc  run_status.h  statistics.cc  statistics.h
trainer/trainer/core/util/placement/: BUILD.bazel  auto_shard.cc  auto_shard.h  feature_placement.cc  feature_placement.h
trainer/trainer/trainer/: AUC.py  ad_gpu_ps_pb2.py  base_config.json  dist.py  hooks.py  model_base.py  ps_shard.py  sniper_config.py  trainer.py  trainer_ops_wrapper.py  util.py
util/: Cargo.toml
util/benches/: simd_benchmark.rs
util/src/: feature_placement.rs  flags.rs  histogram.rs  lib.rs  simd.rs  status.rs  util.rs
util/tests/: tests.rs
(+11 files in other folders)
