[package]
name = "api"
version = "0.0.1"
authors = ["liuzhishan <liuzhishan01@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "grpc"

[dependencies]
log = "0.4"
tonic = "0.12"
prost = "0.13.1"
prost-types = "0.13.1"

[build-dependencies]
tonic-build = "0.12"
