[package]
name = "hub"
authors = ["liuzhishan <liuzhishan01@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "hub for super fast disttributed training framework base on tensorflow."
keywords = ["deep learning", "rust", "distributed training"]

[[bin]]
name = "hub-server"
path = "src/bin/server.rs"

[[bin]]
name = "hub-client"
path = "src/bin/client.rs"

[dependencies]
log = "0.4"
tonic = "0.12"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.39", features = ["full"] }
env_logger = "0.7"
anyhow = "1.0"
grpc = { path = "../grpc" }
util = { path = "../util" }
