[package]
name = "hub"
authors = ["liuzhishan <liuzhishan01@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "hub for super fast disttributed training framework base on tensorflow."
keywords = ["deep learning", "rust", "distributed training"]

[[bin]]
name = "hub-server"
path = "src/bin/server.rs"

[[bin]]
name = "hub-client"
path = "src/bin/client.rs"

[[test]]
name = "test"
path = "tests/tests.rs"

[dependencies]
log = "0.4"
tonic = "0.12"
tonic-types = "0.12"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.39", features = ["full"] }
env_logger = "0.7"
anyhow = "1.0"
grpc = { path = "../grpc" }
util = { path = "../util" }
ps = { path = "../ps" }
tokio-graceful-shutdown = "0.15.1"
async-channel = "2.3.1"
base64 = "0.22.1"
clap = "4.5.13"
rand = "0.8.5"
num_cpus = "1.16"
tracing = "0.1.37"
hashbrown = "0.11.2"
hdrs = "0.3.2"
hdfs-sys = "0.3.0"
local-ip-address = "0.6.2"
sync-unsafe-cell = "0.1.1"
coarsetime = "0.1"
likely_stable = "0.1"
socket2 = { version="0.4", features = ["all"]}
tokio-stream = { version = "0.1", features = ["net"] }
nix = "*"
