[package]
name = "util"
version = "0.0.1"
authors = ["liuzhishan <liuzhishan01@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "util for sniper."

[dependencies]
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
grpc = { path = "../grpc" }
chrono = "0.4.38"
clap = {  version = "4.5.13", features = [ "derive" ] }
clap_derive = { version = "4.0.0-rc.1" }
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1.37"
