load("//sniper:sniper.bzl", "sniper_proto_library")

package(default_visibility = ["//visibility:public"])

sniper_proto_library(
    name = "train_config_proto",
    srcs = ["train_config.proto"],
    cc_api_version = 2,
    deps = [
        "@com_google_protobuf//:cc_wkt_protos",
    ],
)

sniper_proto_library(
    name = "meta_proto",
    srcs = ["meta.proto"],
    cc_api_version = 2,
    deps = [
        ":train_config_proto",
        "@com_google_protobuf//:cc_wkt_protos",
    ],
)

sniper_proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    has_services = 1,
    cc_api_version = 2,
    cc_grpc_version = 1,
    deps = [
        "@com_google_protobuf//:cc_wkt_protos",
        ":meta_proto"
    ]
)
