load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rpc_client",
    hdrs = [
        "rpc_handler.h",
        "rpc_client.h"
    ],
    srcs = [
        "rpc_client.cc"
    ],
    deps = [
        ":tensor_response",
        "//klearn/core/base:base",
        "//klearn/core/proto:klearn_service_proto",
        "//klearn/core/common/spdlog:headers",
        "@com_github_gflags_gflags//:gflags",
        "@local_config_tf//:libtensorflow_framework",
        "@local_config_tf//:tf_header_lib",
    ]
)

cc_library(
    name = "rpc_server",
    hdrs = [
        "request_handler.h",
        "rpc_server.h"
    ],
    srcs = [
        "rpc_server.cc"
    ],
    deps = [
        "//klearn/core/base:base",
        "//klearn/core/proto:meta_proto",
        "//klearn/core/common/spdlog:headers",
        "@com_github_gflags_gflags//:gflags",
        "@local_config_tf//:libtensorflow_framework",
        "@local_config_tf//:tf_header_lib",
    ]
)

cc_library(
    name = "request_handler",
    hdrs = [
        "request_handler.h",
        "request_handler_impl.h"
    ],
    srcs = [
        "request_handler_impl.cc"
    ],
    deps = [
        "//klearn/core/base:base",
        "//klearn/core/proto:meta_proto",
        "//klearn/core/common/spdlog:headers",
        "//klearn/core/util/monitor:monitor",
        "@com_github_gflags_gflags//:gflags",
        "@local_config_tf//:libtensorflow_framework",
        "@local_config_tf//:tf_header_lib",
    ]
)

cc_library(
    name = "tensor_response",
    hdrs = [
        "tensor_response.h",
    ],
    srcs = [
        "tensor_response.cc"
    ],
    deps = [
        "//klearn/core/base:base",
        "//klearn/core/proto:meta_proto",
        "//klearn/core/common/spdlog:headers",
        "@local_config_tf//:libtensorflow_framework",
        "@local_config_tf//:tf_header_lib",
    ]
)

cc_test(
    name = "tensor_response_test",
    linkstatic = 1,
    srcs = glob(["tensor_response_test.cc"]),
    deps = [
        ":tensor_response",
        "//klearn/core/common/spdlog:headers",
        "@com_google_googletest//:gtest_main",
    ],
)
