load("//trainer:trainer.bzl", "trainer_proto_library")

package(default_visibility = ["//visibility:public"])

trainer_proto_library(
    name = "train_config_proto",
    srcs = ["train_config.proto"],
    cc_api_version = 2,
    deps = [
        "@com_google_protobuf//:cc_wkt_protos",
    ],
)

trainer_proto_library(
    name = "meta_proto",
    srcs = ["meta.proto"],
    cc_api_version = 2,
    deps = [
        ":train_config_proto",
        "@com_google_protobuf//:cc_wkt_protos",
    ],
)

trainer_proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    has_services = 1,
    cc_api_version = 2,
    cc_grpc_version = 1,
    deps = [
        "@com_google_protobuf//:cc_wkt_protos",
        ":meta_proto"
    ]
)
