load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "grpc_bytebuffer_stream",
    hdrs = [
        "grpc_bytebuffer_stream.h",
    ],
    srcs = [
        "grpc_bytebuffer_stream.cc"
    ],
    deps = [
        "//klearn:grpc++",
        "//klearn/core/rpc:tensor_response",
        "//klearn/core/common/spdlog:headers",
        "@com_github_gflags_gflags//:gflags",
    ]
)

cc_library(
    name = "grpc_tensor_coding",
    hdrs = [
        "grpc_tensor_coding.h",
    ],
    srcs = [
        "grpc_tensor_coding.cc"
    ],
    deps = [
        "grpc_bytebuffer_stream",
        "//klearn:grpc++",
        "//klearn/core/rpc:tensor_response",
        "//klearn/core/common/spdlog:headers",
        "@com_github_gflags_gflags//:gflags",
    ]
)

cc_test(
    name = "grpc_tensor_coding_test",
    linkstatic = 1,
    srcs = glob(["grpc_tensor_coding_test.cc"]),
    deps = [
        ":grpc_tensor_coding",
        ":grpc_bytebuffer_stream",
        "//klearn/core/common/spdlog:headers",
        "@com_google_googletest//:gtest_main",
    ],
)


cc_library(
    name = "grpc_client",
    hdrs = [
        "grpc_client.h",
    ],
    srcs = [
        "grpc_client.cc"
    ],
    deps = [
        ":grpc_tensor_coding",
        "//klearn:grpc++",
        "//klearn/core/base:base",
        "//klearn/core/rpc:rpc_client",
        "//klearn/core/common/spdlog:headers",
        "//klearn/core/util/monitor:monitor",
        "@com_github_gflags_gflags//:gflags",
    ]
)


cc_library(
    name = "grpc_server",
    hdrs = [
        "grpc_service.h",
        "grpc_server.h",
    ],
    srcs = [
        "grpc_server.cc"
    ],
    deps = [
        ":grpc_tensor_coding",
        "//klearn:grpc++",
        "//klearn/core/base:base",
        "//klearn/core/common/spdlog:headers",
        "//klearn/core/rpc:rpc_server",
        "//klearn/core/rpc:request_handler",
        "//klearn/core/util/monitor:monitor",
        "@com_github_gflags_gflags//:gflags",
    ]
)

cc_binary(
    name = "demo_client",
    srcs = [
        "demo_client.cc"
    ],
    deps = [
        ":grpc_client",
        "//klearn/core/common/spdlog:headers",
        "@com_github_gflags_gflags//:gflags",
    ]
)


cc_binary(
    name = "demo_server",
    srcs = [
        "demo_server.cc"
    ],
    deps = [
        ":grpc_server",
        "//klearn/core/rpc:request_handler",
        "//klearn/core/common/spdlog:headers",
        "@com_github_gflags_gflags//:gflags",
    ]
)