load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "monitor",
    hdrs = [
        "histogram.h",
        "run_status.h",
        "statistics.h"
    ],
    srcs = [
        "histogram.cc",
        "run_status.cc",
        "statistics.cc"
    ],
    deps = [
        "//klearn/core/base:base",
         "@com_github_gflags_gflags//:gflags",
    ]
)