load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "feature_placement",
    hdrs = [
        "auto_shard.h",
        "feature_placement.h",
    ],
    srcs = [
        "auto_shard.cc",
        "feature_placement.cc",
    ],
    deps = [
        "//trainer/core/base:base",
        "//trainer/core/proto:meta_proto",
        "@jsoncpp_git//:jsoncpp",
        "@com_github_google_glog//:glog",
    ]
)
